# Strategy

./: CMakeLists.txt  Strategy.sln
Strategy/: AddStrategy.cpp  AddStrategy.h  Calculator.cpp  Calculator.h  MathStrategy.h  Strategy.vcxproj  Strategy.vcxproj.filters  SubtractStrategy.cpp  SubtractStrategy.h  main.cpp
